# whisper_voice_fashion_nim_ai_agent

./: .env.example  .gitignore  README.md  agents.py  database.py  download_images.py  download_models.py  main.py  model_comparison_results.json  products.json  pyproject.toml  test_model_comparison.py  test_voice_pipeline.py  voice.py
.agent/skills/: ui-ux-pro-max.md
frontend/: package-lock.json  package.json
frontend/public/: audio_debug.html  test.html
frontend/src/: App.jsx  index.css
frontend/src/components/: CartSidebar.jsx  Catalog.jsx  Categories.jsx  Header.jsx  Hero.jsx  ProductPage.jsx  VoiceWidget.jsx
frontend/src/context/: CartContext.jsx
scripts/: generate_embeddings.py
static/: app.js  index.html  style.css
