[project]
name = "whisper-voice-agent"
version = "2.0.0"
description = "VALENTI AI – Voice-driven luxury fashion store (NVIDIA NIM + CrewAI + Whisper + OmniVoice + MongoDB)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "python-multipart>=0.0.9",

    # AI Agents + NVIDIA NIM
    "crewai>=0.30.0",
    "langchain-nvidia-ai-endpoints>=0.1.2",
    "langchain-core>=0.3.0",

    # Voice: ASR (Whisper) + TTS (OmniVoice / gTTS)
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "soundfile>=0.12.1",
    "gtts>=2.3.2",
    "omnivoice>=0.1.3",

    # MongoDB
    "pymongo>=4.6.0",
    "motor>=3.4.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "huggingface-hub>=0.21.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0",
]
